<resources>
    <string name="app_name">MoodBooster</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_first">First Name</string>
    <string name="prompt_last">Last Name</string>
    <string name="prompt_phone">Mobile Phone</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_code">Facility</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="title_activity_login1">Sign in</string>
    <string name="user_name">User\'s Name</string>

</resources>
